Converting my solution to Java