@@ -1,3 +1,6 @@
 
-go run calculate_average.go
+# go run calculate_average.go
+
+JAVA_OPTS="--enable-preview"
+java $JAVA_OPTS --class-path target/average-1.0.0-SNAPSHOT.jar dev.morling.onebrc.CalculateAverage_xpmatteo
 
